--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - alubby</title>
+  <title>alubby</title>
   <link rel="stylesheet" href="./style.css">
-
+<script type="text/javascript">
+      document.onkeydown = function(){return false};
+        document.oncontextmenu = function(){return false}
+    </script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
